--- a/config/database.yml
+++ b/config/database.yml
@@ -5,27 +5,21 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
-  host: localhost	
-  reconnect: false
-  database: db/planshepherd_dev
-  pool: 5
-  username: root
+  adapter: postgresql
+  database: planshepherd
+  username: psadmin
   password: Planshepherd1
+  pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/planshepherd_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/planshepherd_test
 
 production:
   <<: *default
-  database: db/planshepherd_prod
